--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Жданов Александр — DevOps Engineer</title>
-  <meta name="description" content="DevOps Engineer · Kubernetes · Docker · CI/CD · Terraform · Monitoring" />
+  <meta name="description" content="DevOps Engineer · Kubernetes · Docker · CI/CD · Monitoring" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
   <style>
@@ -184,11 +184,11 @@
           <div class="skill-item">Администрирование Linux</div>
           <div class="skill-item">Контейнеризация (Docker)</div>
           <div class="skill-item">Оркестрация (Kubernetes, Helm)</div>
-          <div class="skill-item">CI/CD (GitLab CI)</div>
-          <div class="skill-item">Инфраструктура как код (Terraform)</div>
-          <div class="skill-item">Мониторинг (Prometheus, Grafana)</div>
-          <div class="skill-item">Базы данных (PostgreSQL)</div>
           <div class="skill-item">Веб-серверы (Nginx)</div>
+          <div class="skill-item">Базы данных (PostgreSQL)</div>
+          <div class="skill-item">Мониторинг (Prometheus, Grafana)</div>
+          <div class="skill-item">Автоматизация (Bash)</div>
+          <div class="skill-item">Конфигурация (Ansible)</div>
         </div>
       </div>
 
@@ -199,8 +199,6 @@
           <div class="chip">Docker</div>
           <div class="chip">Kubernetes</div>
           <div class="chip">Helm</div>
-          <div class="chip">Terraform</div>
-          <div class="chip">GitLab CI/CD</div>
           <div class="chip">Nginx</div>
           <div class="chip">PostgreSQL</div>
           <div class="chip">Prometheus</div>
@@ -221,13 +219,13 @@
       <div class="title-main">
         <div>
           <h1 class="fade-up">Жданов Александр</h1>
-          <div class="subtitle muted">DevOps / Infrastructure Engineer</div>
+          <div class="subtitle muted">Инженер инфраструктуры</div>
         </div>
-        <div class="tag chip" aria-hidden>K8s · Docker · CI/CD · IaC</div>
+        <div class="tag chip" aria-hidden>Kubernetes · Docker · Мониторинг</div>
       </div>
 
       <div class="summary fade-up" style="transition-delay:.03s">
-        DevOps-инженер с опытом построения и поддержки отказоустойчивой инфраструктуры. Автоматизирую процессы развертывания и мониторинга, что позволяет повышать надежность и скорость delivery. Нацелен на создание масштабируемых и эффективных систем с использованием современных практик и инструментов.
+        Инженер с практическим опытом администрирования Linux-серверов, работы с контейнеризацией и оркестрацией приложений. Готов решать задачи по поддержанию и улучшению инфраструктуры, мониторингу и автоматизации рутинных процессов.
       </div>
 
       <!-- experience inside right column -->
@@ -238,19 +236,18 @@
         </div>
 
         <article class="job">
-          <h3>DevOps / Инженер инфраструктуры</h3>
+          <h3>Инженер по серверной инфраструктуре</h3>
           <div class="org muted">ООО «СИБИНТЕК» — Москва · <a href="https://www.sibintek.ru" target="_blank" rel="noopener noreferrer">sibintek.ru</a></div>
 
           <ul>
-            <li>Поддержка и развитие инфраструктуры на <strong>Kubernetes</strong>: развертывание приложений с помощью <strong>Helm</strong>, мониторинг состояния кластера.</li>
-            <li>Сборка и управление Docker-образами для различных сервисов компании.</li>
-            <li>Настройка и поддержка CI/CD пайплайнов в <strong>GitLab CI</strong> для автоматизации тестирования и деплоя.</li>
-            <li>Администрирование серверов на <strong>Linux</strong>: оптимизация производительности, обеспечение безопасности, обработка инцидентов.</li>
-            <li>Настройка <strong>Nginx</strong> в качестве reverse proxy и балансировщика нагрузки.</li>
-            <li>Обеспечение отказоустойчивости баз данных: настройка репликации, регулярное бэкапирование и восстановление <strong>PostgreSQL</strong>.</li>
-            <li>Развертывание и настройка стека мониторинга на основе <strong>Prometheus</strong> и <strong>Grafana</strong>; создание дашбордов и алертов.</li>
-            <li>Автоматизация рутинных задач с помощью <strong>Bash-скриптов</strong> и <strong>Ansible</strong>.</li>
-            <li>Работа над проектами по переводу legacy-инфраструктуры в контейнеризированный вид.</li>
+            <li>Администрирование серверов на ОС Linux</li>
+            <li>Работа с Docker-контейнерами и оркестрация в Kubernetes</li>
+            <li>Настройка и поддержка веб-сервера Nginx</li>
+            <li>Администрирование СУБД PostgreSQL: бэкапы, восстановление</li>
+            <li>Настройка мониторинга на основе Prometheus и Grafana</li>
+            <li>Автоматизация задач с помощью Bash-скриптов</li>
+            <li>Конфигурация серверов с использованием Ansible</li>
+            <li>Решение инцидентов и поддержание доступности сервисов</li>
           </ul>
         </article>
       </div>
@@ -267,7 +264,7 @@
 
       <section class="section fade-up" style="transition-delay:.09s">
         <h2>Дополнительная информация</h2>
-        <p class="muted">Ищу возможности для профессионального роста в области DevOps. Готов к удаленной работе и полной занятости. Желаемая должность: DevOps-инженер.</p>
+        <p class="muted">Ищу возможность развиваться в области DevOps. Готов к удаленной работе и полной занятости.</p>
       </section>
 
       <div class="footer fade-up" style="transition-delay:.1s">
