--- a/index.html
+++ b/index.html
@@ -163,18 +163,16 @@
   <div class="paper" role="main">
     <aside class="left">
       <div class="avatar" aria-hidden>АЖ</div>
-      <div class="name">Жданов Александр Александрович</div>
-      <div class="meta">DevOps Engineer · 22 года</div>
+      <div class="name">Александр Жданов</div>
+      <div class="meta">DevOps Engineer</div>
 
       <div class="section">
         <h2>Контакты</h2>
         <div class="contact-list">
           <div>📞 <a href="tel:+79775816265">+7 (977) 581-62-65</a></div>
           <div>✉️ <a href="mailto:gosurasu@gmail.com">gosurasu@gmail.com</a></div>
-          <div>Telegram: <a href="https://t.me/ignoretheparty" target="_blank" rel="noopener noreferrer">@ignoretheparty</a></div>
-          <div>Город: Москва</div>
-          <div>Гражданство: Россия</div>
-          <div>Не готов к переезду • Не готов к командировкам</div>
+          <div>📱 <a href="https://t.me/ignoretheparty" target="_blank" rel="noopener noreferrer">Telegram</a></div>
+          <div>📍 Москва</div>
         </div>
       </div>
 
@@ -183,10 +181,10 @@
         <div class="skills-grid">
           <div class="skill-item">Администрирование Linux</div>
           <div class="skill-item">Контейнеризация (Docker)</div>
-          <div class="skill-item">Оркестрация (Kubernetes, Helm)</div>
+          <div class="skill-item">Оркестрация (Kubernetes)</div>
           <div class="skill-item">Веб-серверы (Nginx)</div>
           <div class="skill-item">Базы данных (PostgreSQL)</div>
-          <div class="skill-item">Мониторинг (Prometheus, Grafana)</div>
+          <div class="skill-item">Мониторинг (Prometheus/Grafana)</div>
           <div class="skill-item">Автоматизация (Bash)</div>
           <div class="skill-item">Конфигурация (Ansible)</div>
         </div>
@@ -211,33 +209,33 @@
 
       <div class="section">
         <h2>Языки</h2>
-        <div class="muted">Русский — Родной<br>Английский — B2 (Средне-продвинутый)</div>
+        <div class="muted">Русский — родной<br>Английский — B2</div>
       </div>
     </aside>
 
     <main class="right">
       <div class="title-main">
         <div>
-          <h1 class="fade-up">Жданов Александр</h1>
-          <div class="subtitle muted">Инженер инфраструктуры</div>
+          <h1 class="fade-up">Александр Жданов</h1>
+          <div class="subtitle muted">DevOps Engineer</div>
         </div>
         <div class="tag chip" aria-hidden>Kubernetes · Docker · Мониторинг</div>
       </div>
 
       <div class="summary fade-up" style="transition-delay:.03s">
-        Инженер с практическим опытом администрирования Linux-серверов, работы с контейнеризацией и оркестрацией приложений. Готов решать задачи по поддержанию и улучшению инфраструктуры, мониторингу и автоматизации рутинных процессов.
+        Инженер с опытом администрирования Linux-серверов, работы с контейнеризацией и оркестрацией приложений. 
+        Специализируюсь на поддержке и улучшении инфраструктуры, мониторинге и автоматизации процессов.
       </div>
 
-      <!-- experience inside right column -->
       <div class="experience-block fade-up" style="transition-delay:.05s">
         <div class="experience-head">
           <h2>Опыт работы</h2>
-          <div class="experience-date muted">Октябрь 2024 — настоящее время</div>
+          <div class="experience-date muted">2024 — настоящее время</div>
         </div>
 
         <article class="job">
           <h3>Инженер по серверной инфраструктуре</h3>
-          <div class="org muted">ООО «СИБИНТЕК» — Москва · <a href="https://www.sibintek.ru" target="_blank" rel="noopener noreferrer">sibintek.ru</a></div>
+          <div class="org muted">ООО «СИБИНТЕК» · <a href="https://www.sibintek.ru" target="_blank" rel="noopener noreferrer">sibintek.ru</a></div>
 
           <ul>
             <li>Администрирование серверов на ОС Linux</li>
@@ -247,7 +245,6 @@
             <li>Настройка мониторинга на основе Prometheus и Grafana</li>
             <li>Автоматизация задач с помощью Bash-скриптов</li>
             <li>Конфигурация серверов с использованием Ansible</li>
-            <li>Решение инцидентов и поддержание доступности сервисов</li>
           </ul>
         </article>
       </div>
@@ -255,27 +252,20 @@
       <section class="section fade-up" style="transition-delay:.08s">
         <h2>Образование</h2>
         <div class="muted">
-          <p><strong>Неоконченное высшее (бакалавриат)</strong></p>
-          <p>Национальный исследовательский технологический университет «МИСиС», Москва</p>
+          <p><strong>Национальный исследовательский технологический университет «МИСиС»</strong></p>
           <p>Институт компьютерных наук, Прикладная информатика</p>
-          <p><strong>Ожидаемый год окончания: 2026</strong></p>
+          <p>Неоконченное высшее (бакалавриат)</p>
         </div>
       </section>
 
-      <section class="section fade-up" style="transition-delay:.09s">
-        <h2>Дополнительная информация</h2>
-        <p class="muted">Ищу возможность развиваться в области DevOps. Готов к удаленной работе и полной занятости.</p>
-      </section>
-
       <div class="footer fade-up" style="transition-delay:.1s">
-        <div class="muted">Обновлено: сентябрь 2025</div>
-        <div class="muted">© Жданов Александр</div>
+        <div class="muted">Обновлено: 2025</div>
+        <div class="muted">© Александр Жданов</div>
       </div>
     </main>
   </div>
 
   <script>
-    // unobtrusive reveal animations: avatar, tag and sections
     const obs = new IntersectionObserver((entries) => {
       entries.forEach(e => {
         if (e.isIntersecting) {
@@ -286,7 +276,6 @@
     }, { threshold: 0.12 });
 
     document.addEventListener('DOMContentLoaded', () => {
-      // observe fades + avatar + tag
       document.querySelectorAll('.fade-up').forEach(el => obs.observe(el));
       const extras = document.querySelectorAll('.avatar, .tag');
       extras.forEach(el => { el.classList.add('fade-up'); obs.observe(el); });
