--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <div class="experience-block">
         <div class="experience-head">
           <h2>Опыт работы</h2>
-          <div class="muted">2024 — настоящее время</div>
+          <div class="muted">10.2024 — 10.2025</div>
         </div>
         <article class="job">
           <h3>Инженер по серверной инфраструктуре</h3>
