Change title and subtitle to reflect SRE role

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Жданов Александр — DevOps Engineer</title>
-  <meta name="description" content="DevOps Engineer · Kubernetes · Docker · CI/CD · Monitoring" />
+  <title>Жданов Александр — SRE</title>
+  <meta name="description" content="SRE · Kubernetes · Docker · CI/CD · Monitoring" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -124,7 +124,7 @@
     <main class="right">
       <div class="title-main">
         <h1>Александр Жданов</h1>
-        <div class="subtitle">DevOps Engineer</div>
+        <div class="subtitle">SRE</div>
       </div>
 
       <div class="summary">
