Revise personal webpage for ML Ops focus
Updated title and description for the personal webpage. Revised summary and experience details to reflect a focus on ML Ops and DevOps.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Жданов Александр — SRE</title>
-  <meta name="description" content="SRE · Kubernetes · Docker · CI/CD · Monitoring" />
+  <title>Жданов Александр — ML Ops / DevOps</title>
+  <meta name="description" content="ML Ops / DevOps · Kubernetes · Docker · CI/CD · Monitoring" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
@@ -112,6 +112,9 @@
           <div class="skill-item">Bash</div>
           <div class="skill-item">Ansible</div>
           <div class="skill-item">Git</div>
+          <div class="skill-item">Python</div>
+          <div class="skill-item">CI/CD (Jenkins / Argo)</div>
+          <div class="skill-item">ML Pipelines (базовые)</div>
         </div>
       </div>
 
@@ -124,12 +127,12 @@
     <main class="right">
       <div class="title-main">
         <h1>Александр Жданов</h1>
-        <div class="subtitle">SRE</div>
+        <div class="subtitle">ML Ops / DevOps Engineer (Trainee)</div>
       </div>
 
       <div class="summary">
-        Инженер с опытом администрирования Linux-серверов, работы с контейнеризацией и оркестрацией приложений. 
-        Специализируюсь на поддержке и улучшении инфраструктуры, мониторинге и автоматизации процессов.
+        Инженер с опытом администрирования Linux, контейнеризации и CI/CD. Опыт работы с Kubernetes, Helm, мониторингом и автоматизацией процессов. 
+        Готов развиваться в ML Ops: поддержка и подготовка сервисов и моделей к промышленной эксплуатации.
       </div>
 
       <div class="experience-block">
@@ -148,6 +151,9 @@
             <li>Мониторинг на основе Prometheus и Grafana</li>
             <li>Автоматизация задач с помощью Bash-скриптов</li>
             <li>Конфигурация серверов с использованием Ansible</li>
+            <li>Подготовка и деплой сервисов к промышленной эксплуатации</li>
+            <li>Автоматизация процессов запуска и мониторинга сервисов, близких к ML пайплайнам</li>
+            <li>Работа с API и настройка CI/CD для сервисов с моделями</li>
           </ul>
         </article>
       </div>
