Update subtitle for ML Ops / DevOps Engineer

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <main class="right">
       <div class="title-main">
         <h1>Александр Жданов</h1>
-        <div class="subtitle">ML Ops / DevOps Engineer (Trainee)</div>
+        <div class="subtitle">ML Ops / DevOps Engineer</div>
       </div>
 
       <div class="summary">
