Update skills and CI/CD description in index.html
Removed Ansible from skills list and updated CI/CD description.

--- a/index.html
+++ b/index.html
@@ -110,10 +110,9 @@
           <div class="skill-item">Prometheus</div>
           <div class="skill-item">Grafana</div>
           <div class="skill-item">Bash</div>
-          <div class="skill-item">Ansible</div>
           <div class="skill-item">Git</div>
           <div class="skill-item">Python</div>
-          <div class="skill-item">CI/CD (Jenkins / Argo)</div>
+          <div class="skill-item">CI/CD (Gitlab CI / Argo)</div>
           <div class="skill-item">ML Pipelines (базовые)</div>
         </div>
       </div>
@@ -150,7 +149,6 @@
             <li>Администрирование PostgreSQL: бэкапы, восстановление</li>
             <li>Мониторинг на основе Prometheus и Grafana</li>
             <li>Автоматизация задач с помощью Bash-скриптов</li>
-            <li>Конфигурация серверов с использованием Ansible</li>
             <li>Подготовка и деплой сервисов к промышленной эксплуатации</li>
             <li>Автоматизация процессов запуска и мониторинга сервисов, близких к ML пайплайнам</li>
             <li>Работа с API и настройка CI/CD для сервисов с моделями</li>
