Correct Gitlab to GitLab in skills section

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="skill-item">Bash</div>
           <div class="skill-item">Git</div>
           <div class="skill-item">Python</div>
-          <div class="skill-item">CI/CD (Gitlab CI / Argo)</div>
+          <div class="skill-item">CI/CD (GitLab CI / Argo)</div>
           <div class="skill-item">ML Pipelines (базовые)</div>
         </div>
       </div>
