Update contact and skills sections in index.html

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="contact-list">
           <div>📞 <a href="tel:+79775816265">+7 (977) 581-62-65</a></div>
           <div>✉️ <a href="mailto:gosurasu@gmail.com">gosurasu@gmail.com</a></div>
-          <div>📱 <a href="https://t.me/ignoretheparty" target="_blank">Telegram</a></div>
+          <div>📱 <a href="@ignoretheparty" target="_blank">Telegram</a></div>
           <div>📍 Москва</div>
         </div>
       </div>
@@ -112,7 +112,7 @@
           <div class="skill-item">Bash</div>
           <div class="skill-item">Git</div>
           <div class="skill-item">Python</div>
-          <div class="skill-item">CI/CD (GitLab CI / Argo)</div>
+          <div class="skill-item">CI/CD (GitLab CI / Jenkins / Argo)</div>
           <div class="skill-item">ML Pipelines (базовые)</div>
         </div>
       </div>
@@ -131,7 +131,7 @@
 
       <div class="summary">
         Инженер с опытом администрирования Linux, контейнеризации и CI/CD. Опыт работы с Kubernetes, Helm, мониторингом и автоматизацией процессов. 
-        Готов развиваться в ML Ops: поддержка и подготовка сервисов и моделей к промышленной эксплуатации.
+        Готов развиваться в ML Ops: поддержка немодельных сервисов, настройка CI/CD пайплайнов и мониторинг инфраструктуры для ML-проектов.
       </div>
 
       <div class="experience-block">
@@ -149,9 +149,8 @@
             <li>Администрирование PostgreSQL: бэкапы, восстановление</li>
             <li>Мониторинг на основе Prometheus и Grafana</li>
             <li>Автоматизация задач с помощью Bash-скриптов</li>
-            <li>Подготовка и деплой сервисов к промышленной эксплуатации</li>
-            <li>Автоматизация процессов запуска и мониторинга сервисов, близких к ML пайплайнам</li>
-            <li>Работа с API и настройка CI/CD для сервисов с моделями</li>
+            <li>Поддержка немодельных сервисов и ML пайплайнов (базовый уровень)</li>
+            <li>Настройка CI/CD для сервисов с использованием Jenkins/Argo</li>
           </ul>
         </article>
       </div>
