Update CI/CD references in index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           <div class="skill-item">Bash</div>
           <div class="skill-item">Git</div>
           <div class="skill-item">Python</div>
-          <div class="skill-item">CI/CD (GitLab CI / Jenkins / Argo)</div>
+          <div class="skill-item">CI/CD</div>
           <div class="skill-item">ML Pipelines (базовые)</div>
         </div>
       </div>
@@ -150,7 +150,7 @@
             <li>Мониторинг на основе Prometheus и Grafana</li>
             <li>Автоматизация задач с помощью Bash-скриптов</li>
             <li>Поддержка немодельных сервисов и ML пайплайнов (базовый уровень)</li>
-            <li>Настройка CI/CD для сервисов с использованием Jenkins/Argo</li>
+            <li>Настройка CI/CD для сервисов с использованием GitLab CI/Argo</li>
           </ul>
         </article>
       </div>
