--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     *{box-sizing:border-box}
     html, body{
       margin:0;
-      padding:0 18px 0 18px; /* только по горизонтали */
+      padding:0 18px 0 18px;
       font-family:Inter, system-ui, sans-serif;
       background:linear-gradient(180deg,var(--bg),#eef4fb);
       color:var(--accent);
@@ -28,7 +28,7 @@
     }
     .paper{
       max-width:1100px;
-      margin:0 auto;
+      margin:0 auto 30px; /* немного пространства снизу для PDF */
       display:grid;
       grid-template-columns:300px 1fr;
       gap:28px;
@@ -53,7 +53,6 @@
     }
     h2{font-size:15px;margin:0 0 10px;color:var(--accent)}
     .contact-list{font-size:14px;color:var(--muted);line-height:1.6}
-    .contact-list a{color:inherit;text-decoration:none}
     .skills-grid{display:flex;flex-wrap:wrap;gap:8px}
     .skill-item{
       background:#f8fbff;border-radius:8px;
@@ -65,7 +64,7 @@
       background:var(--card);
       border-radius:var(--radius);
       box-shadow:0 10px 40px rgba(16,24,40,0.06);
-      padding:24px 24px 18px 24px; /* снизу меньше */
+      padding:24px; 
     }
     .title-main h1{font-size:28px;margin:0}
     .subtitle{color:var(--muted);font-weight:600;margin-bottom:12px}
@@ -81,7 +80,7 @@
       justify-content:space-between;
       color:var(--muted);
       font-size:13px;
-      margin-top:0;
+      margin-top:15px; /* пространство снизу */
     }
     @media(max-width:880px){
       .paper{grid-template-columns:1fr}
@@ -93,15 +92,17 @@
   <div class="paper">
     <aside class="left">
       <div class="avatar">АЖ</div>
+
       <div>
         <h2>Контакты</h2>
         <div class="contact-list">
           <div>📞 <a href="tel:+79775816265">+7 (977) 581-62-65</a></div>
-          <div>✉️ <a href="mailto:gosurasu@gmail.com">gosurasu@gmail.com</a></div>
-          <div>📱 <a href="@ignoretheparty" target="_blank">Telegram</a></div>
+          <div>gosurasu@gmail.com</div>
+          <div>📱 Telegram: <a href="https://t.me/ignoretheparty" target="_blank">ignoretheparty</a></div>
           <div>📍 Москва</div>
         </div>
       </div>
+
       <div>
         <h2>Навыки и технологии</h2>
         <div class="skills-grid">
@@ -120,6 +121,7 @@
           <div class="skill-item">ML Pipelines (базовые)</div>
         </div>
       </div>
+
       <div>
         <h2>Языки</h2>
         <div class="muted">Русский — родной<br>Английский — B2</div>
@@ -131,10 +133,12 @@
         <h1>Александр Жданов</h1>
         <div class="subtitle">ML Ops / DevOps Engineer</div>
       </div>
+
       <div class="summary">
         Инженер с опытом администрирования Linux, контейнеризации и CI/CD. Опыт работы с Kubernetes, Helm, мониторингом и автоматизацией процессов. 
         Готов развиваться в ML Ops: поддержка немодельных сервисов, настройка CI/CD пайплайнов и мониторинг инфраструктуры для ML-проектов.
       </div>
+
       <div class="experience-block">
         <div class="experience-head">
           <h2>Опыт работы</h2>
@@ -155,6 +159,7 @@
           </ul>
         </article>
       </div>
+
       <section class="experience-block">
         <h2>Образование</h2>
         <div class="muted">
@@ -163,6 +168,7 @@
           <p>2021–2026 (бакалавриат, в процессе)</p>
         </div>
       </section>
+
       <div class="footer">
         <div class="muted">Обновлено: 2025</div>
         <div class="muted">© Александр Жданов</div>
