--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
       --radius:12px;
       --gap:22px;
     }
-    *{box-sizing:border-box}
-    html, body{
+    *{box-sizing:border-box;}
+    body{
       margin:0;
-      padding:0 18px 0 18px;
       font-family:Inter, system-ui, sans-serif;
       background:linear-gradient(180deg,var(--bg),#eef4fb);
       color:var(--accent);
       -webkit-font-smoothing:antialiased;
+      padding:32px 18px;
     }
     .paper{
       max-width:1100px;
-      margin:0 auto 30px; /* немного пространства снизу для PDF */
+      margin:0 auto;
       display:grid;
       grid-template-columns:300px 1fr;
       gap:28px;
@@ -51,40 +51,51 @@
       color:#fff;font-weight:700;font-size:26px;
       margin:0 auto 10px;
     }
-    h2{font-size:15px;margin:0 0 10px;color:var(--accent)}
-    .contact-list{font-size:14px;color:var(--muted);line-height:1.6}
-    .skills-grid{display:flex;flex-wrap:wrap;gap:8px}
+    h2{font-size:15px;margin:0 0 10px;color:var(--accent);}
+    .contact-list{
+      font-size:14px;
+      color:var(--muted);
+      line-height:1.6;
+      display:flex;
+      flex-direction:column;
+      gap:6px;
+    }
+    .contact-list a{
+      color:inherit;
+      text-decoration:none;
+    }
+    .skills-grid{display:flex;flex-wrap:wrap;gap:8px;}
     .skill-item{
       background:#f8fbff;border-radius:8px;
       padding:6px 10px;font-size:13px;
       box-shadow:0 6px 18px rgba(16,24,40,0.03);
     }
-    .muted{color:var(--muted);font-size:13px}
+    .muted{color:var(--muted);font-size:13px;}
     .right{
       background:var(--card);
       border-radius:var(--radius);
       box-shadow:0 10px 40px rgba(16,24,40,0.06);
-      padding:24px; 
+      padding:34px;
     }
-    .title-main h1{font-size:28px;margin:0}
-    .subtitle{color:var(--muted);font-weight:600;margin-bottom:12px}
-    .summary{margin:10px 0 20px;font-size:15px;color:#334155}
-    .experience-block{margin-top:20px}
-    .experience-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px}
-    .job h3{margin:0;font-size:16px}
-    .job .org{color:var(--muted);font-size:13px;margin-top:4px}
-    .job ul{margin:10px 0 0;padding-left:18px}
-    .job li{margin-bottom:6px;line-height:1.5}
+    .title-main h1{font-size:28px;margin:0;}
+    .subtitle{color:var(--muted);font-weight:600;margin-bottom:12px;}
+    .summary{margin:10px 0 20px;font-size:15px;color:#334155;}
+    .experience-block{margin-top:20px;}
+    .experience-head{display:flex;justify-content:space-between;align-items:center;margin-bottom:8px;}
+    .job h3{margin:0;font-size:16px;}
+    .job .org{color:var(--muted);font-size:13px;margin-top:4px;}
+    .job ul{margin:10px 0 0;padding-left:18px;}
+    .job li{margin-bottom:6px;line-height:1.5;}
     .footer{
       display:flex;
       justify-content:space-between;
       color:var(--muted);
       font-size:13px;
-      margin-top:15px; /* пространство снизу */
+      margin-top:20px; /* оставляем немного пространства внизу */
     }
     @media(max-width:880px){
-      .paper{grid-template-columns:1fr}
-      .left{position:relative}
+      .paper{grid-template-columns:1fr;}
+      .left{position:relative;}
     }
   </style>
 </head>
@@ -96,8 +107,8 @@
       <div>
         <h2>Контакты</h2>
         <div class="contact-list">
-          <div>📞 <a href="tel:+79775816265">+7 (977) 581-62-65</a></div>
-          <div>gosurasu@gmail.com</div>
+          <div>📞 +7 (977) 581-62-65</div>
+          <div>✉️ gosurasu@gmail.com</div>
           <div>📱 Telegram: <a href="https://t.me/ignoretheparty" target="_blank">ignoretheparty</a></div>
           <div>📍 Москва</div>
         </div>
